--- a/ssm-springmvc-part/pom.xml
+++ b/ssm-springmvc-part/pom.xml
@@ -50,7 +50,16 @@
         <artifactId>yasson</artifactId>
         <version>3.0.4</version>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.18.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.34</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
-
 </project>
