--- a/ssm-springmvc-part/springmvc-base-input-02/pom.xml
+++ b/ssm-springmvc-part/springmvc-base-input-02/pom.xml
@@ -31,5 +31,13 @@
       <groupId>org.eclipse</groupId>
       <artifactId>yasson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
   </dependencies> 
 </project>
