--- a/sky-take-out/sky-server/src/main/resources/application.yml
+++ b/sky-take-out/sky-server/src/main/resources/application.yml
@@ -12,7 +12,11 @@ spring:
       url: jdbc:mysql://${sky.datasource.host}:${sky.datasource.port}/${sky.datasource.database}?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
       username: ${sky.datasource.username}
       password: ${sky.datasource.password}
-
+  servlet:
+    multipart:
+      # 配置上传文件大小限制
+      max-file-size: 2MB
+      max-request-size: 20MB
 mybatis:
   #mapper配置文件
   mapper-locations: classpath:mapper/*.xml
@@ -38,3 +42,10 @@ sky:
     admin-ttl: 72000000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+# MinIO文件系统
+minio:
+  endpoint: http://localhost:9000
+  access-key: ztSawi1jKte56EHTwqFy
+  secret-key: DfJHIzBmoQbv9Y7sHB7o0GaBRvFHOVMxcZaKaIux
+  bucket-name: sky-take-out-images
