短链接管理模块初始化

--- a/shortlink/project/src/main/resources/application.yaml
+++ b/shortlink/project/src/main/resources/application.yaml
@@ -1,2 +1,32 @@
 server:
-  port: 8002
+  port: 9001
+
+spring:
+  application:
+    name: short-link-project
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: 123456
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/link?useUnicode=true&characterEncoding=UTF-8&rewriteBatchedStatements=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    username: root
+    password: root
+
+short-link:
+  domain:
+    default: nurl.ink:8001
+  stats:
+    locale:
+      amap-key: 824c511f0997586ea016f979fdb23087
+  goto-domain:
+    white-list:
+      enable: true
+      names: '拿个offer,知乎,掘金,博客园'
+      details:
+        - nageoffer.com
+        - zhihu.com
+        - juejin.cn
+        - cnblogs.com
